# ndtech-entities

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-ndtech-entities  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json
entities/: BUILD.bazel  EntitiesServer.go
protos/: BUILD.bazel  entities.proto  mod-tidy-protos.sh
