load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jjhegedus/ndtech-entities
gazelle(name = "gazelle")

go_library(
    name = "ndtech-entities_lib",
    srcs = ["main.go"],
    importpath = "github.com/jjhegedus/ndtech-entities",
    visibility = ["//visibility:private"],
    deps = [
        "//entities",
        "//protos:entities",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "ndtech-entities",
    embed = [":ndtech-entities_lib"],
    visibility = ["//visibility:public"],
)
